--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
+    "axios": "^1.6.7",
     "bootstrap": "5.3.3",
     "chart.js": "4.4.1",
     "core-js": "3.36.0",
@@ -30,6 +31,7 @@
     "vue-count-to": "1.0.13",
     "vue-flatpickr-component": "11.0.4",
     "vue-router": "4.3.0",
+    "vuedraggable": "^4.1.0",
     "vuex": "4.1.0"
   },
   "devDependencies": {
